adding Payment and Med History templates for tracking

--- a/quickstart/ui-backend.conf
+++ b/quickstart/ui-backend.conf
@@ -1,7 +1,8 @@
 users
   {
-    Alice { party = "Alice" },
-    Bob { party = "Bob" },
-    USD Bank { party = "USD_Bank" },
-    EUR Bank { party = "EUR_Bank" }
+    Frank { party = "Frank" },
+    Dr Kim { party = "Dr_Kim" },
+    Princeton-Plainsboro Hospital { party = "Princeton_Plainsboro_Hospital" },
+    CVS { party = "CVS" },
+    Aetna { party = "Aetna" }
   }
